--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -18,7 +18,11 @@
 
    {% include footer.html %}
    {% include scripts.html %}
-
+   
+   {% if jekyll.environment == 'production' %}
+		{% include analytics.html %}
+	{% endif %}
+	
 </body>
 
 </html>
