Added SEO info as well as improvements for social sharing

--- a/_includes/head.html
+++ b/_includes/head.html
@@ -18,4 +18,6 @@
 
     <!-- Modernizr -->
     <script src="{{ "/assets/js/modernizr.custom.15390.js" | prepend: site.baseurl }}" type="text/javascript"></script>
+    
+    {% seo %}
 </head>
