--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,7 +3,69 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="">
+    <meta name="author" content="Patricia Sannie Lee" />
+    <meta property="og:title" content="{% if page.title %} {{ page.title | strip_html | strip_newlines | truncate: 160 }}
+    {% else %}
+      {{ site.title }}
+    {% endif %}" />
+    <meta property="og:description" content="{% if page.excerpt %} {{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}
+      {% else %}
+        {{ site.description }}
+      {% endif %}" />
+    <meta property="og:url" content="{{ page.url | replace:'index.html','' | prepend: site.baseurl | prepend: site.url }}" />
+    <meta property="og:site_name" content="{{ site.title }}" />
+    <meta property="og:locale" content="en_US" />
+    <meta name="twitter:site" content="@geekrockchick24" />
+	<meta name="twitter:description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}" />
+	
+	{% if page.title %}
+  <!-- Article specific OG data -->
+  <!-- The OG:Type dictates a number of other tags on posts. -->
+  <meta property="og:type" content="article" />
+  <meta property="article:published_time" content="{{page.date}}" />
+
+  <!-- page.modified isn't a natural Jekyll property, but it can be added. -->
+  {% if page.modified %}
+    <meta property="article:modified_time" content="{{page.modified}}" />
+  {% endif %}
+
+  <!-- Here my author and publisher tags are the same (yay self-publishing) -->
+  <meta property="article:author" content="https://www.facebook.com/psannielee" />
+
+
+  <!-- Article section isn't a required property, but it can be good to have -->
+  <meta property="article:section" content="{{page.vertical}}" />
+
+  <!-- I use the page.categories property for OG tags. -->
+  {% for tag in page.categories %}
+    <meta property="article:tag" content="{{tag}}" />
+  {% endfor %}
+
+  <!-- I prefer the summary_large_image Twitter card for posts. -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <!-- You, you're the creator. -->
+  <meta name="twitter:creator" content="@geekrockchick24" />
+  <!-- This property is for the article title, not site title. -->
+  <meta name="twitter:title" content="{{page.title}}" />
+  {% if page.image %}
+    <meta property="og:image" content="{{page.image}}" />
+    <meta name="twitter:image" content="{{page.image}}" />
+  {% else %}
+    <meta property="og:image" content="https://sannielee.com/assets/img/rocknroll.jpg" />
+    <meta name="twitter:image" content="https://sannielee.com/assets/img/rocknroll.jpg" />
+  {% endif %}
+  
+  {% else %}
+  <!-- OG data for homepage -->
+  <meta property="og:image" content="https://sannielee.com/assets/img/rocknroll.jpg" />
+  <meta property="og:type" content="website" />
+  <meta name="twitter:card" content="summary" />
+  <meta name="twitter:title" content="{{site.title}}" />
+  <meta name="twitter:image" content="https://sannielee.com/assets/img/rocknroll.jpg" />
+
+{% endif %}
     <title>{{ page.title }}</title>
+    
 
     <!-- Favicon -->
     <link rel="icon" type="image/x-icon" href="{{ "/assets/img/favicon.ico" | prepend: site.baseurl }}" />
