--- a/_includes/head.html
+++ b/_includes/head.html
@@ -54,7 +54,7 @@
   	<!-- OG data for homepage -->
   	<meta property="og:image" content="https://sannielee.com/assets/img/rocknroll.jpg" />
   	<meta property="og:type" content="website" />
-  	<meta name="twitter:card" content="summary" />
+  	<meta name="twitter:card" content="summary_large_image" />
   	<meta name="twitter:title" content="{{site.title}}" />
   	<meta name="twitter:image" content="https://sannielee.com/assets/img/rocknroll.jpg" />
   {% endif %}
